--- a/login.html
+++ b/login.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>管理系统</title>
+    <title>请先登陆</title>
     <link rel="stylesheet" type="text/css" href="libs/ext/resources/css/ext-all.css">
     <script type="text/javascript" src="libs/ext/ext-debug.js"></script>
-    <script ty pe="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="login.js"></script>
 </head>
-<body>
+<body style="background: #f2f2f2">
+
 </body>
 </html>
