--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>请先登陆</title>
+    <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="libs/ext/resources/css/ext-all.css">
     <script type="text/javascript" src="libs/ext/ext-debug.js"></script>
     <script type="text/javascript" src="login.js"></script>
