--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
     <title>管理系统</title>
     <link rel="stylesheet" type="text/css" href="libs/ext/resources/css/ext-all.css">
+    <link rel="stylesheet" type="text/css" href="libs/ext/examples/ux/css/GroupTabPanel.css" />
+    <style>
+        .x-grouptabpanel .x-grouptab-row .x-grid-cell-inner {
+            font-size: 18px;
+        }
+
+    </style>
     <script type="text/javascript" src="libs/ext/ext-debug.js"></script>
-    <script ty pe="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
 </body>
