--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
     <title>管理系统</title>
     <link rel="stylesheet" type="text/css" href="libs/ext/resources/css/ext-all.css">
     <link rel="stylesheet" type="text/css" href="libs/ext/examples/ux/css/GroupTabPanel.css" />
-    <style>
-        .x-grouptabpanel .x-grouptab-row .x-grid-cell-inner {
-            font-size: 18px;
-        }
-
-    </style>
+    <link rel="stylesheet" href="global.css">
     <script type="text/javascript" src="libs/ext/ext-debug.js"></script>
+    <script type="text/javascript" src="libs/ext/locale/ext-lang-zh_CN.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
