--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
 <body>
 <div class="logo"></div>
 <div class="b1">
-        <form action="index.html" method="post" id="login-form">
+        <form action="index.html" method="get" id="login-form">
             <div>
                 <label>用户名：</label><input type="text" name="id" value="" class="text" size="20" tabindex="1">
             </div>
