--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="libs/ext/resources/css/ext-all.css">
     <link rel="stylesheet" type="text/css" href="libs/ext/examples/ux/css/GroupTabPanel.css" />
     <link rel="stylesheet" href="global.css">
-    <script type="text/javascript" src="libs/ext/ext-all-debug.js"></script>
+    <script type="text/javascript" src="libs/ext/ext-all.js"></script>
     <script type="text/javascript" src="libs/ext/locale/ext-lang-zh_CN.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </head>
