--- a/print.html
+++ b/print.html
@@ -78,7 +78,38 @@
         <td><strong>办 单 评 审 记 录</strong></td>
     </tr>
     <tr>
-        <td><p>市场营销部办单人员：<span class="name">陈冰</span>28447278<span class="order-date">办单日期：1月21日</span></p></td>
+        <td><p>市场营销部办单人员：<span class="name">陈冰</span>28447278<span class="date">办单日期：1月21日</span></p></td>
+    </tr>
+    <tr>
+        <td>
+            <p>1、产品研发部根据客户采购信息确认相关技术要求及设计周期能否满足要求（针对新产品及设计变更）。
+                <span>签字：</span><span class="date">日期：&nbsp;&nbsp;月&nbsp;&nbsp;日</span>
+            </p>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <p>
+                2、生产管理部（项目管理组）审核客户意向交货期、根据实际生产情况提供计划交库期。
+                <span>签字：</span><span class="date">日期：&nbsp;&nbsp;月&nbsp;&nbsp;日</span>
+            </p>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <p>
+                3、综合管理部（经营计划组）提供/审核对外配件销售价格、审核并在金蝶中开通项目号。
+                <span>签字：</span><span class="date">日期：&nbsp;&nbsp;月&nbsp;&nbsp;日</span>
+            </p>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <p>
+                市场营销部主管领导审核：
+                <span class="date">日期：&nbsp;&nbsp;月&nbsp;&nbsp;日</span>
+            </p>
+        </td>
     </tr>
 </table>
 </body>
