--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <title>管理系统</title>
     <link rel="stylesheet" type="text/css" href="libs/ext/resources/css/ext-all.css">
-    <link rel="stylesheet" type="text/css" href="libs/ext/examples/ux/css/GroupTabPanel.css" />
+    <link rel="stylesheet" type="text/css" href="libs/ext/examples/ux/css/GroupTabPanel.css"/>
     <link rel="stylesheet" href="global.css">
     <script type="text/javascript" src="libs/ext/ext-debug.js"></script>
     <script type="text/javascript" src="libs/ext/locale/ext-lang-zh_CN.js"></script>
+    <script type="text/javascript">
+        window.LoginUser = {
+            id:'20212213',
+            name:'Admin',
+            address:'福建省XXXX',
+            contact:'1598XXXX',
+            email:'d@111.com',
+            type:'管理员',
+            sale_group:'动车'
+        };
+    </script>
     <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
@@ -130,6 +141,14 @@
     </table>
     </body>
     </html>
+</script>
+<script type="tpl" id="navTpl">
+    <p id="navBar" class="">
+        当前用户：<strong>张XX</strong>
+        <a id="viewInfo" href="#">个人信息</a>
+        <a id="changePwd" href="#">修改密码</a>
+        <a class="logout" href="#">注销</a>
+    </p>
 </script>
 </body>
 </html>
