--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             sale_group:'动车'
         };
     </script>
+    <script type="text/javascript" src="config.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
