--- a/print.html
+++ b/print.html
@@ -71,6 +71,19 @@
             <td></td>
             <td></td>
         </tr>
+        <tr>
+            <td>1</td>
+            <td>金属波纹管</td>
+            <td>800030988910</td>
+            <td>个</td>
+            <td>3</td>
+            <td></td>
+            <td></td>
+            <td>501620130014</td>
+            <td>1/25/13</td>
+            <td></td>
+            <td></td>
+        </tr>
     </tbody>
 </table>
 <table border="1" class="order-record">
