--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             contact: '1598XXXX',
             email: 'd@111.com',
             type: '管理员',
-            sale_group: '动车'
+            saleGroup: '动车'
         };
     </script>
     <script type="text/javascript" src="config.js"></script>
@@ -145,7 +145,7 @@
 </script>
 <script type="tpl" id="navTpl">
     <p id="navBar" class="">
-        当前用户：<strong>张XX</strong>
+        当前用户：<strong>{name}</strong>
         <a id="viewInfo" href="#">个人信息</a>
         <a id="changePwd" href="#">修改密码</a>
         <a class="logout" href="#">注销</a>
