--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         </tr>
         <tr>
             <td></td>
-            <td class="large">收货单位: {custom.name}</td>
-            <td>联系人名:</td>
-            <td class="large">结算单位: {custom.name}</td>
+            <td class="large">收货单位: {customCompany}</td>
+            <td>联系人名: {customName}</td>
+            <td class="large">结算单位: {customCompany}</td>
         </tr>
         <tr>
             <td>原始依据：</td>
-            <td>单位地址: {custom.address}</td>
-            <td>联系电话：{custom.contact_method}</td>
+            <td>单位地址: {customAddress}</td>
+            <td>联系电话：{customContact}</td>
             <td>发运方式：</td>
         </tr>
         <tr>
@@ -105,7 +105,7 @@
             <td><strong>办 单 评 审 记 录</strong></td>
         </tr>
         <tr>
-            <td><p>市场营销部办单人员：<span class="name">{salesman.name}</span>{salesman.contact}
+            <td><p>市场营销部办单人员：<span class="name">{salesManName}</span>{salesManContact}
                 <span class="date">办单日期：{date}</span></p></td>
         </tr>
         <tr>
