--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             contact: '1598XXXX',
             email: 'd@111.com',
             type: '管理员',
-            saleGroup: '动车'
+            saleGroup: 1
         };
     </script>
     <script type="text/javascript" src="config.js"></script>
@@ -49,7 +49,7 @@
         <tr>
             <td></td>
             <td class="large">收货单位: {customCompany}</td>
-            <td>联系人名: {customName}</td>
+            <td>联系人名: </td>
             <td class="large">结算单位: {customCompany}</td>
         </tr>
         <tr>
