--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
         <tpl for="detail">
             <tr>
                 <td>{#}</td>
-                <td>{material_name}</td>
+                <td>{materialName}</td>
                 <td>{type}</td>
                 <td>{unit}</td>
                 <td>{amount}</td>
-                <td>{unit_tax_price}</td>
-                <td>{tax_price}</td>
+                <td>{unitTaxPrice}</td>
+                <td>{taxPrice}</td>
                 <td>{parent.project}</td>
                 <td>{deadline}</td>
                 <td></td>
