--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <table class="order" border="1">
         <tr>
             <td class="order-id" colspan="4">
-                <strong>销售订单编号：{id}</strong>
+                <strong>销售订单编号：{orderCode}</strong>
             </td>
         </tr>
         <tr>
