--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>管理系统</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="libs/ext/resources/css/ext-all.css">
     <link rel="stylesheet" type="text/css" href="libs/ext/examples/ux/css/GroupTabPanel.css"/>
     <link rel="stylesheet" href="global.css">
