--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <script type="text/javascript">
         window.LoginUser = {
             id: '20212213',
+            workNum: 11,
             name: 'Admin',
             address: '福建省XXXX',
             contact: '1598XXXX',
             email: 'd@111.com',
-            type: '管理员',
+            userType: 1,
             saleGroup: 1
         };
     </script>
@@ -149,7 +150,7 @@
         当前用户：<strong>{name}</strong>
         <a id="viewInfo" href="#">个人信息</a>
         <a id="changePwd" href="#">修改密码</a>
-        <a class="logout" href="#">注销</a>
+        <a class="logout" href="logout.html">注销</a>
     </p>
 </script>
 </body>
